--- a/swissqr/_templates/ch_qrcode_invoice.pdf.twig
+++ b/swissqr/_templates/ch_qrcode_invoice.pdf.twig
@@ -2,6 +2,7 @@
 {% set ch_qrencode_url = qrencode_url|default('http://127.0.0.1:8001/swissqr') %}
 {% set ch_qrencode_company_country = qrencode_company_country|default('CH') %}
 {% set ch_fontFamily = ch_fontFamily|default("'Helvetica', sans-serif") %}
+{% set ch_swissqr_ref = ch_swissqr_ref|default("") %}
 
 <!DOCTYPE html>
 <html lang="{{ language }}">
@@ -67,103 +68,63 @@
 			.ch_empfansscheinfeld {
 				position: absolute;
 				top: 192mm;
-				left: 62mm;
+				left: 0mm;
 				height: 105mm;
-				width: 148mm;
+				width:62mm;
+				border-right: 1pt dotted black;
 				border-top: 1pt dotted black;
 			}
 			
 			.ch_zahlteilfeld {
 				position: absolute;
 				top: 192mm;
-				left: 0mm;
+				left: 62mm;
 				height: 105mm;
-				width:62mm;
-				border-right: 1pt dotted black;
+				width: 148mm;
 				border-top: 1pt dotted black;
-			} 
+			}
 			
-			.ch_empfansscheinfeld_kreditor_label {
-				position: absolute;
-				top: 206mm;
-				left: 5.5mm;
+			.ch_empfansscheinfeld_label {
 				font-size: 6pt;
 				font-weight: bold;
 				line-height: 7pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;	
+				height: 2.6mm;
+				width: 100%;
+				vertical-align: top;
+				font-family: {{ ch_fontFamily|raw }} !important;
 			}
 			
-			.ch_empfansscheinfeld_kreditor {
-				position: absolute;
-				top: 208.5mm;
-				left: 5.5mm;
+			.ch_empfansscheinfeld_fliesstext {
 				font-size: 8pt;
 				font-weight: light;
 				line-height: 9.2pt !important;
+				width: 100%;
+				vertical-align: top;
+				padding-bottom: 4mm;
 				font-family: {{ ch_fontFamily|raw }} !important;
-			} 
- 
-			.ch_empfansscheinfeld_debitor_label {
+			}
+						
+			.ch_empfansscheinfeld_text_block {
 				position: absolute;
-				top: 225mm;
+				top: 205mm;
 				left: 5.5mm;
-				font-size: 6pt;
-				font-weight: bold;
-				line-height: 7pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;	
+				width: 55mm;
 			}
 			
-			.ch_empfansscheinfeld_debitor {
-				position: absolute;
-				top: 227.5mm;
-				left: 5.5mm;
-				font-size: 8pt;
-				font-weight: light;
-				line-height: 9.2pt !important;	
-				font-family: {{ ch_fontFamily|raw }} !important;
-			} 
- 
-			.ch_empfansscheinfeld_waehrung_label {
+			.ch_empfansscheinfeld_waehrung_block {
 				position: absolute;
 				top: 261mm;
 				left: 5.5mm;
-				font-size: 6pt;
-				font-weight: bold;
-				line-height: 7pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;	
+				width: 10mm;
 			}
-			
-			 .ch_empfansscheinfeld_waehrung {
-				position: absolute;
-				top: 264mm;
-				left: 5.5mm;
-				font-size: 8pt;
-				font-weight: light;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;	
-			}
-			
-			.ch_empfansscheinfeld_betrag_label {
+			 
+			.ch_empfansscheinfeld_betrag_block {
 				position: absolute;
 				top: 261mm;
 				left: 17.2mm;
-				font-size: 6pt;
-				font-weight: bold;
-				line-height: 7pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
 			}
 			
-			.ch_empfansscheinfeld_betrag {
-				position: absolute;
-				top: 264mm;
-				left: 17.2mm;
-				font-size: 8pt;
-				font-weight: light;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			}
-
-			.ch_empfansscheinfeld_info_label {
+			.ch_empfansscheinfeld_annahmestelle {
 				position: absolute;
 				top: 275.5mm;
 				left: 42mm;
@@ -172,115 +133,46 @@
 				line-height: 7pt !important;
 				font-family: {{ ch_fontFamily|raw }} !important;
 			}
-			
-			.ch_empfansscheinfeld_info {
-				position: absolute;
-				top: 278mm;
-				left: 42mm;
-				font-size: 8pt;
-				font-weight: light;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			}
 
-			.ch_zahlteilfeld_kreditor_label {
-				position: absolute;
-				top: 199mm;
-				left: 118mm;
+			.ch_zahlteilfeld_label {
 				font-size: 8pt;
 				font-weight: bold;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;	
+				line-height: 9.2pt !important;	
+				height: 3.4mm;
+				width: 100%;
+				vertical-align: top;
+				font-family: {{ ch_fontFamily|raw }} !important;
 			}
 			
-			.ch_zahlteilfeld_kreditor {
-				position: absolute;
-				top: 202.2mm;
-				left: 118mm;
+			.ch_zahlteilfeld_fliesstext {
 				font-size: 10pt;
 				font-weight: light;
 				line-height: 11.5pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			} 
-			
-			.ch_zahlteilfeld_debitor_label {
-				position: absolute;
-				top: 234mm;
-				left: 118mm;
-				font-size: 8pt;
-				font-weight: bold;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			}
-			
-			.ch_zahlteilfeld_debitor {
-				position: absolute;
-				top: 237.2mm;
-				left: 118mm;
-				font-size: 10pt;
-				font-weight: light;
-				line-height: 11.5pt !important;
+				width: 100%;
+				vertical-align: top;
+				padding-bottom: 5mm;
 				font-family: {{ ch_fontFamily|raw }} !important;
 			} 
 
-			.ch_zahlteilfeld_info_label {
+			.ch_zahlteilfeld_text_block {
 				position: absolute;
-				top: 222.5mm;
 				left: 118mm;
-				font-size: 8pt;
-				font-weight: bold;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
+				top: 198mm;
+				width: 90mm;
 			}
-			
-			.ch_zahlteilfeld_info {
-				position: absolute;
-				top: 225.7mm;
-				left: 118mm;
-				font-size: 10pt;
-				font-weight: light;
-				line-height: 11.5pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			} 
 
-			.ch_zahlteilfeld_waehrung_label {
+			.ch_zahlteilfeld_waehrung_block {
 				position: absolute;
-				top: 261mm;
 				left: 67mm;
-				font-size: 8pt;
-				font-weight: bold;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			}
-			
-			.ch_zahlteilfeld_waehrung {
-				position: absolute;
-				top: 264.5mm;
-				left: 67mm;
-				font-size: 10pt;
-				font-weight: light;
-				line-height: 11.5pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
-			}
-
-			.ch_zahlteilfeld_betrag_label {
-				position: absolute;
 				top: 261mm;
-				left: 83mm;
-				font-size: 8pt;
-				font-weight: bold;
-				line-height: 9.2pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
+				width: 14mm;
 			}
 			
-			.ch_zahlteilfeld_betrag {
+			.ch_zahlteilfeld_betrag_block {
 				position: absolute;
-				top: 264.5mm;
 				left: 83mm;
-				font-size: 10pt;
-				font-weight: light;
-				line-height: 11.5pt !important;
-				font-family: {{ ch_fontFamily|raw }} !important;
+				top: 261mm;
+				width: 90mm;
 			}
 		</style>
 	{% endblock %}
@@ -295,40 +187,55 @@
 		<div class="ch_cut90">
 			<img src="{{ch_qrencode_url}}/_pic/cut90.png">
 		</div>
-		<div class="ch_empfansscheinfeld">
-		</div>
+		<div class="ch_empfansscheinfeld"></div>
 		<div class="ch_empfansscheinfeld_header">
 			<strong>Empfangsschein</strong>
 		</div>
-		<div class="ch_empfansscheinfeld_kreditor_label">
-			<strong>Konto / Zahlbar an</strong>
+		<div class="ch_empfansscheinfeld_text_block">
+			<div class="ch_empfansscheinfeld_label">
+				<strong>Konto / Zahlbar an</strong>
+			</div>
+			<div class="ch_empfansscheinfeld_fliesstext">
+				{{ invoice['template.payment_details'] }}<br>
+				{{ invoice['template.company'] }}<br>
+				{{ invoice['template.address']|nl2br  }}
+			</div>
+			{% if swissqr_ref is not empty is not empty %}	
+				<div class="ch_empfansscheinfeld_label">
+					<strong>Referenz</strong>
+				</div>
+				<div class="ch_empfansscheinfeld_fliesstext">
+					{{ swissqr_ref }}
+				</div>
+			{% endif %}
+			<div class="ch_empfansscheinfeld_label">
+				<strong>Zahlbar durch</strong>
+			</div>
+			<div class="ch_empfansscheinfeld_fliesstext">
+				{{ invoice['customer.name'] }}<br>
+				{{ invoice['customer.address']|nl2br }}<br>
+				{{ invoice['customer.country']|country_name }}
+			</div>
 		</div>
-		<div class="ch_empfansscheinfeld_kreditor">
-			{{ invoice['template.payment_details'] }}<br>
-			{{ invoice['template.company'] }}<br>
-			{{ invoice['template.address']|nl2br  }}
+		
+		<div class="ch_empfansscheinfeld_waehrung_block">
+			<div class="ch_empfansscheinfeld_label">
+				<strong>Währung</strong>
+			</div>
+			<div class="ch_empfansscheinfeld_fliesstext">
+				{{ invoice['invoice.currency'] }}
+			</div>
 		</div>
-		<div class="ch_empfansscheinfeld_debitor_label">
-			<strong>Zahlbar durch</strong>
+		
+		<div class="ch_empfansscheinfeld_betrag_block">
+			<div class="ch_empfansscheinfeld_label">
+				<strong>Betrag</strong>
+			</div>
+			<div class="ch_empfansscheinfeld_fliesstext">
+				{{ invoice['invoice.total_nc'] }}
 		</div>
-		<div class="ch_empfansscheinfeld_debitor">
-			{{ invoice['customer.name'] }}<br>
-			{{ invoice['customer.address']|nl2br }}<br>
-			{{ model.customer.country|country_name }}
 		</div>
-		<div class="ch_empfansscheinfeld_waehrung_label">
-			<strong>Währung</strong>
-		</div>
-		<div class="ch_empfansscheinfeld_waehrung">
-			{{ invoice['invoice.currency'] }}
-		</div>
-		<div class="ch_empfansscheinfeld_betrag_label">
-			<strong>Betrag</strong>
-		</div>
-		<div class="ch_empfansscheinfeld_betrag">
-			{{ invoice['invoice.total_nc'] }}
-		</div>
-		<div class="ch_empfansscheinfeld_info_label">
+		<div class="ch_empfansscheinfeld_annahmestelle">
 			<strong>Annahmestelle</strong>
 		</div>
 	{% endblock %}
@@ -344,44 +251,64 @@
 		<div class="ch_qrcode">
 			<img src="{{ch_qrencode_url}}/index.php?rechnung_id={{ invoice['invoice.number'] }}&project_comment={{ invoice['query.project.comment'] }}&paymentDetails={{ invoice['template.payment_details'] }}&company_name={{ invoice['template.company'] }}&company_address={{ invoice['template.address']|nl2br }}&company_country={{ch_qrencode_company_country}}&money_total={{ invoice['invoice.total_plain'] }}&money_currency={{ invoice['invoice.currency'] }}&customer_name={{ invoice['customer.name'] }}&customer_address={{ invoice['customer.address']|nl2br }}&customer_country={{ invoice['customer.country'] }}&project_name={{ invoice['project.name'] }}">
 		</div>
-		<div class="ch_zahlteilfeld_kreditor_label">
-			<strong>Konto / Zahlbar an</strong>
+		<div class="ch_zahlteilfeld_text_block">
+			<div class="ch_zahlteilfeld_label">
+				<strong>Konto / Zahlbar an</strong>
+			</div>
+			<div class="ch_zahlteilfeld_fliesstext">
+				{{ invoice['template.payment_details'] }}<br>
+				{{ invoice['template.company'] }}<br>
+				{{ invoice['template.address']|nl2br }}<br>
+			</div>
+
+			{% if ch_swissqr_ref is not empty is not empty %}	
+				<div class="ch_zahlteilfeld_label">
+					<strong>Referenz</strong>
+				</div>
+				<div class="ch_zahlteilfeld_fliesstext">
+					{{ ch_swissqr_ref }}
+				</div>
+			{% endif %}
+			
+			{% if (invoice['query.project.comment'] is not empty) and (invoice['project.name'] is not empty) %}	
+				<div class="ch_zahlteilfeld_label">
+					<strong>Zusätzliche Information</strong>
+				</div>
+				<div class="ch_zahlteilfeld_fliesstext">
+					{% if invoice['query.project.comment'] is not empty %}	
+						{{ invoice['query.project.comment'] }}
+					{% else %}
+						{{ invoice['project.name'] }}
+					{% endif %} 
+				</div>
+			{% endif %}
+			
+			<div class="ch_zahlteilfeld_label">
+				<strong>Zahlbar durch</strong>
+			</div>
+			<div class="ch_zahlteilfeld_fliesstext">
+				{{ invoice['customer.name'] }}<br>
+				{{ invoice['customer.address']|nl2br }}<br>
+				{{ invoice['customer.country']|country_name }}
+			</div>
 		</div>
-		<div class="ch_zahlteilfeld_kreditor">
-			{{ invoice['template.payment_details'] }}<br>
-			{{ invoice['template.company'] }}<br>
-			{{ invoice['template.address']|nl2br }}<br>
-			{{ model.company.country|country_name }}
+		
+		<div class="ch_zahlteilfeld_waehrung_block">
+			<div class="ch_zahlteilfeld_label">
+				<strong>Währung</strong>
+			</div>
+			<div class="ch_zahlteilfeld_fliesstext">
+				{{ invoice['invoice.currency'] }}
+			</div>
 		</div>
-		<div class="ch_zahlteilfeld_debitor_label">
-			<strong>Zahlbar durch</strong>
-		</div>
-		<div class="ch_zahlteilfeld_debitor">
-			{{ invoice['customer.name'] }}<br>
-			{{ invoice['customer.address']|nl2br }}<br>
-			{{ model.customer.country|country_name }}
-		</div>
-		<div class="ch_zahlteilfeld_info_label">
-			<strong>Zusätzliche Information</strong>
-		</div>
-		<div class="ch_zahlteilfeld_info">
-		{% if invoice['query.project.comment'] is not empty %}	
-			{{ invoice['query.project.comment'] }}
-		{% else %}
-			{{ invoice['project.name'] }}
-		{% endif %} 
-		</div>		
-		<div class="ch_zahlteilfeld_waehrung_label">
-			<strong>Währung</strong>
-		</div>
-		<div class="ch_zahlteilfeld_waehrung">
-			{{ invoice['invoice.currency'] }}
-		</div>
-		<div class="ch_zahlteilfeld_betrag_label">
-			<strong>Betrag</strong>
-		</div>
-		<div class="ch_zahlteilfeld_betrag">
-			{{ invoice['invoice.total_nc'] }}
+		
+		<div class="ch_zahlteilfeld_betrag_block">
+			<div class="ch_zahlteilfeld_label">
+				<strong>Betrag</strong>
+			</div>
+			<div class="ch_zahlteilfeld_fliesstext">
+				{{ invoice['invoice.total_nc']  }}
+			</div>
 		</div>
 	{% endblock %}
 {% endblock %}
